Fix sticky header on mobile

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -79,17 +79,24 @@
 }
 
 @media screen and (max-width: 900px) {
+
+  .navbar {
+    background-color: var(--bg);
+    backdrop-filter: none;
+    height: 60px;
+  }
+
   .nav-menu {
     display: flex;
     flex-direction: column;
     width: 100%;
     border-top: 1px solid var(--post-outline);
     position: absolute;
-    top: 70px;
+    top: 60px;
     left: -110%;
     opacity: 1;
     transition: all 0.3s ease;
-    height: calc(100vh - 70px);
+    height: calc(100vh - 60px);
   }
 
   .nav-item {
